[package]
name = "chem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
bevy = "0.12.1"
bevy_rapier2d = { version = "0.23.0", features = [ "simd-stable", "debug-render-2d" ] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bevy_prototype_lyon = "0.10.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1